--- a/index.html
+++ b/index.html
@@ -1,100 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lakhan Lakhnotra Instagram Profile</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .profile-container {
-            max-width: 935px;
-            margin: 0 auto;
-        }
-
-        .profile-header {
-            display: flex;
-            align-items: center;
-            padding: 20px 0;
-        }
-
-        .profile-pic {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 2px solid #fff;
-            margin-right: 30px;
-        }
-
-        .profile-info h1 {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 28px;
-            margin: 0 0 10px 0;
-        }
-
-        .verified-badge {
-            width: 20px;
-            height: 20px;
-        }
-
-        .stats {
-            display: flex;
-            gap: 20px;
-            margin: 15px 0;
-        }
-
-        .stat-number {
-            font-weight: bold;
-        }
-
-        .bio {
-            max-width: 400px;
-            line-height: 1.5;
-        }
-
-        .follow-button {
-            background-color: #0095f6;
-            color: white;
-            border: none;
-            padding: 8px 24px;
-            border-radius: 8px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Lakhan Lakhnotra's official Instagram profile page. Dharma Protects Those Who Protect It.">
+  <meta name="keywords" content="Lakhan, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma, lakhan_ahir_9499">
+  <meta name="author" content="Lakhan Lakhnotra">
+  <meta name="robots" content="index, follow">
+  <title>Lakhan Lakhnotra (@lakhan_lakhnotra) - Instagram</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+    .profile {
+      max-width: 500px;
+      margin: auto;
+      text-align: center;
+    }
+    .profile img.dp {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+    }
+    .username {
+      font-size: 24px;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+    .verified {
+      display: inline-block;
+      vertical-align: middle;
+      width: 20px;
+      height: 20px;
+    }
+    .name {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px 0;
+    }
+    .stats div {
+      font-size: 16px;
+    }
+    .bio {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+    .handle {
+      color: #a78bfa;
+    }
+    .actions button {
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .follow { background-color: #0095f6; color: white; }
+    .message { background-color: #262626; color: white; border: 1px solid #333; }
+  </style>
 </head>
 <body>
-    <div class="profile-container">
-        <div class="profile-header">
-            <img src="https://example.com/your-profile-picture.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="profile-info">
-                <h1>
-                    Lakhan Lakhnotra
-                    <svg class="verified-badge" viewBox="0 0 24 24" fill="#0095f6">
-                        <path d="M23.5 12c0 6.35-5.15 11.5-11.5 11.5S.5 18.35.5 12 5.65.5 12 .5 23.5 5.65 23.5 12zm-6.9-3.54l-6.18 6.18-2.82-2.83a1.5 1.5 0 00-2.12 2.12l3.89 3.89a1.5 1.5 0 002.12 0l7.07-7.07a1.5 1.5 0 00-2.12-2.12z"/>
-                    </svg>
-                </h1>
-                <div class="stats">
-                    <div><span class="stat-number">100</span> posts</div>
-                    <div><span class="stat-number">10K</span> followers</div>
-                    <div><span class="stat-number">500</span> following</div>
-                </div>
-                <p class="bio">
-                    📍 Entrepreneur | Content Creator<br>
-                    💼 Founder & CEO<br>
-                    ✉️ Business inquiries: contact@example.com
-                </p>
-                <button class="follow-button">Follow</button>
-            </div>
-        </div>
-    </div>
+  <div class="profile">
+    <img src="/profile.jpg" alt="Profile Picture" class="dp">
+    <div class="username">lakhan_lakhnotra <img src="/verified.svg" alt="Verified" class="verified"></div>
+    <div class="name">Lakhan Ahir</div><div class="stats">
+  <div><strong>14</strong><br>posts</div>
+  <div><strong>639</strong><br>followers</div>
+  <div><strong>548</strong><br>following</div>
+</div>
+
+<div class="bio">
+  धर्मो रक्षति रक्षित:<br>
+  (Dharma Protects Those Who Protect It)<br>
+  <span class="handle">@lakhan_ahir_9499</span><br>
+  © lakhan_lakhnotra
+</div>
+
+<div class="actions">
+  <button class="follow">Follow</button>
+  <button class="message">Message</button>
+</div>
+
+  </div>
 </body>
 </html>
