--- a/index.html
+++ b/index.html
@@ -12,74 +12,98 @@
     body {
       background-color: #000;
       color: #fff;
-      font-family: Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       margin: 0;
       padding: 20px;
     }
     .profile {
-      max-width: 500px;
+      max-width: 400px;
       margin: auto;
-      text-align: center;
+    }
+    .top-row {
+      display: flex;
+      align-items: center;
+      gap: 20px;
     }
     .profile img.dp {
-      width: 120px;
-      height: 120px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
-    }
-    .username {
-      font-size: 24px;
-      font-weight: bold;
-      margin: 10px 0;
-    }
-    .verified {
-      display: inline-block;
-      vertical-align: middle;
-      width: 20px;
-      height: 20px;
-    }
-    .name {
-      font-size: 18px;
-      margin-bottom: 10px;
+      object-fit: cover;
     }
     .stats {
       display: flex;
-      justify-content: space-around;
-      margin: 20px 0;
+      justify-content: space-between;
+      width: 100%;
+      font-size: 15px;
     }
     .stats div {
+      text-align: center;
+    }
+    .username {
       font-size: 16px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .verified {
+      width: 14px;
+      height: 14px;
+    }
+    .name {
+      font-size: 14px;
+      font-weight: 600;
+      margin: 8px 0 2px;
     }
     .bio {
-      font-size: 16px;
-      margin-bottom: 20px;
+      font-size: 14px;
+      line-height: 1.4;
     }
     .handle {
       color: #a78bfa;
+      font-size: 14px;
+    }
+    .actions {
+      display: flex;
+      gap: 8px;
+      margin-top: 10px;
     }
     .actions button {
-      padding: 10px 20px;
-      margin: 5px;
-      font-size: 16px;
+      flex: 1;
+      padding: 6px 0;
+      font-size: 14px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
     }
-    .follow { background-color: #0095f6; color: white; }
-    .message { background-color: #262626; color: white; border: 1px solid #333; }
+    .follow {
+      background-color: #0095f6;
+      color: white;
+    }
+    .message {
+      background-color: #262626;
+      color: white;
+      border: 1px solid #333;
+    }
   </style>
 </head>
 <body>
   <div class="profile">
-    <img src="/profile.jpg" alt="Profile Picture" class="dp">
-    <div class="username">lakhan_lakhnotra <img src="/verified.svg" alt="Verified" class="verified"></div>
-    <div class="name">Lakhan Ahir</div><div class="stats">
-  <div><strong>14</strong><br>posts</div>
-  <div><strong>639</strong><br>followers</div>
-  <div><strong>548</strong><br>following</div>
+    <div class="top-row">
+      <img src="profile.jpg" alt="Lakhan DP" class="dp">
+      <div class="stats">
+        <div><strong>14</strong><br>posts</div>
+        <div><strong>639</strong><br>followers</div>
+        <div><strong>548</strong><br>following</div>
+      </div>
+    </div><div class="username" style="margin-top: 12px;">
+  lakhan_lakhnotra <img src="verified.svg" alt="Verified" class="verified">
 </div>
+<div class="name">Lakhan Ahir</div>
 
 <div class="bio">
-  धर्मो रक्षति रक्षित:<br>
+  धर्मो रक्षति रक्षितः<br>
   (Dharma Protects Those Who Protect It)<br>
   <span class="handle">@lakhan_ahir_9499</span><br>
   © lakhan_lakhnotra
