--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
       margin-bottom: 12px;
     }
     .username {
-      font-size: 16px;
-      font-weight: 600;
+      font-size: 20px;
+      font-weight: bold;
       display: flex;
       align-items: center;
       gap: 5px;
     }
     .verified {
-      width: 14px;
-      height: 14px;
+      width: 16px;
+      height: 16px;
     }
     .top-row {
       display: flex;
@@ -60,7 +60,8 @@
     .name {
       font-size: 14px;
       font-weight: 600;
-      margin: 8px 0 2px;
+      margin: 12px 0 4px;
+      text-align: center;
     }
     .bio {
       font-size: 14px;
