--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 12px;
+      margin-bottom: 6px;
     }
     .username {
       font-size: 20px;
@@ -36,6 +37,12 @@
     .verified {
       width: 16px;
       height: 16px;
+    }
+    .name-block {
+      text-align: center;
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
     .top-row {
       display: flex;
@@ -55,12 +62,6 @@
       font-size: 15px;
     }
     .stats div {
-      text-align: center;
-    }
-    .name {
-      font-size: 14px;
-      font-weight: 600;
-      margin: 12px 0 4px;
       text-align: center;
     }
     .bio {
@@ -100,29 +101,30 @@
   <div class="profile">
     <div class="username-block">
       <div class="username">lakhan_lakhnotra <img src="verified.svg" alt="Verified" class="verified"></div>
-    </div><div class="top-row">
-  <img src="profile.jpg" alt="Lakhan DP" class="dp">
-  <div class="stats">
-    <div><strong>14</strong><br>posts</div>
-    <div><strong>639</strong><br>followers</div>
-    <div><strong>548</strong><br>following</div>
-  </div>
-</div>
+    </div>
 
-<div class="name">Lakhan Ahir</div>
+    <div class="name-block">Lakhan Ahir</div>
 
-<div class="bio">
-  धर्मो रक्षति रक्षितः<br>
-  (Dharma Protects Those Who Protect It)<br>
-  <span class="handle">@lakhan_ahir_9499</span><br>
-  © lakhan_lakhnotra
-</div>
+    <div class="top-row">
+      <img src="profile.jpg" alt="Lakhan DP" class="dp">
+      <div class="stats">
+        <div><strong>14</strong><br>posts</div>
+        <div><strong>639</strong><br>followers</div>
+        <div><strong>548</strong><br>following</div>
+      </div>
+    </div>
 
-<div class="actions">
-  <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
-  <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
-</div>
+    <div class="bio">
+      धर्मो रक्षति रक्षितः<br>
+      (Dharma Protects Those Who Protect It)<br>
+      <span class="handle">@lakhan_ahir_9499</span><br>
+      © lakhan_lakhnotra
+    </div>
 
+    <div class="actions">
+      <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
+      <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
+    </div>
   </div>
 </body>
 </html>
