--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       text-align: center;
       font-size: 16px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin: 8px 0 14px; /* yahan niche wali spacing badhai gayi hai */
     }
     .top-row {
       display: flex;
