--- a/index.html
+++ b/index.html
@@ -2,89 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Lakhan Lakhnotra's official Instagram profile page. Dharma Protects Those Who Protect It.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Lakhan Lakhnotra's official Instagram profile clone.">
   <meta name="keywords" content="Lakhan, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma, lakhan_ahir_9499">
   <meta name="author" content="Lakhan Lakhnotra">
   <meta name="robots" content="index, follow">
-  <title>Lakhan Lakhnotra (@lakhan_lakhnotra) - Instagram</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>lakhan_lakhnotra • Instagram</title>
   <style>
     body {
-      background-color: #000;
-      color: #fff;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
+      background-color: #000;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
-    .profile {
-      max-width: 400px;
-      margin: auto;
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px 16px 40px;
     }
-    .username-block {
+    .top {
       display: flex;
       align-items: center;
-      justify-content: center;
-      margin-bottom: 6px;
+      margin-bottom: 20px;
     }
-    .username {
-      font-size: 20px;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-    .verified {
-      width: 16px;
-      height: 16px;
-    }
-    .name-block {
-      text-align: center;
-      font-size: 16px;
-      font-weight: bold;
-      margin: 8px 0 14px; /* yahan niche wali spacing badhai gayi hai */
-    }
-    .top-row {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-    .profile img.dp {
-      width: 90px;
-      height: 90px;
+    .dp {
+      width: 95px;
+      height: 95px;
       border-radius: 50%;
       object-fit: cover;
+      margin-right: 28px;
+    }
+    .info {
+      flex: 1;
+    }
+    .username-line {
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+    .username-line img {
+      width: 18px;
+      height: 18px;
+      margin-left: 6px;
+    }
+    .name {
+      font-weight: 600;
+      font-size: 14px;
+      margin-bottom: 18px;
     }
     .stats {
       display: flex;
       justify-content: space-between;
-      width: 100%;
-      font-size: 15px;
+      font-size: 14px;
+      margin-bottom: 12px;
     }
     .stats div {
       text-align: center;
     }
-    .bio {
-      font-size: 14px;
-      line-height: 1.4;
-    }
-    .handle {
-      color: #a78bfa;
-      font-size: 14px;
-    }
-    .actions {
+    .btns {
       display: flex;
       gap: 8px;
-      margin-top: 10px;
+      margin-bottom: 16px;
     }
-    .actions a {
+    .btns a {
       flex: 1;
-      padding: 6px 0;
-      font-size: 14px;
+      padding: 8px 0;
       text-align: center;
-      text-decoration: none;
       border-radius: 8px;
-      cursor: pointer;
+      font-weight: 600;
+      font-size: 14px;
+      text-decoration: none;
     }
     .follow {
       background-color: #0095f6;
@@ -95,35 +85,41 @@
       color: white;
       border: 1px solid #333;
     }
+    .bio {
+      font-size: 14px;
+      line-height: 1.5;
+    }
+    .handle {
+      color: #a78bfa;
+    }
   </style>
 </head>
 <body>
-  <div class="profile">
-    <div class="username-block">
-      <div class="username">lakhan_lakhnotra <img src="verified.svg" alt="Verified" class="verified"></div>
-    </div>
-
-    <div class="name-block">Lakhan Ahir</div>
-
-    <div class="top-row">
-      <img src="profile.jpg" alt="Lakhan DP" class="dp">
-      <div class="stats">
-        <div><strong>14</strong><br>posts</div>
-        <div><strong>639</strong><br>followers</div>
-        <div><strong>548</strong><br>following</div>
+  <div class="container">
+    <div class="top">
+      <img src="profile.jpg" alt="Profile" class="dp">
+      <div class="info">
+        <div class="username-line">
+          lakhan_lakhnotra
+          <img src="verified.svg" alt="Verified">
+        </div>
+        <div class="name">Lakhan Ahir</div>
+        <div class="stats">
+          <div><strong>14</strong><br>Posts</div>
+          <div><strong>639</strong><br>Followers</div>
+          <div><strong>548</strong><br>Following</div>
+        </div>
+        <div class="btns">
+          <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
+          <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
+        </div>
       </div>
     </div>
-
     <div class="bio">
       धर्मो रक्षति रक्षितः<br>
       (Dharma Protects Those Who Protect It)<br>
       <span class="handle">@lakhan_ahir_9499</span><br>
       © lakhan_lakhnotra
-    </div>
-
-    <div class="actions">
-      <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
-      <a href="https://www.instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
     </div>
   </div>
 </body>
