--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Lakhan Lakhnotra's official Instagram profile clone.">
-  <meta name="keywords" content="Lakhan, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma, lakhan_ahir_9499">
-  <meta name="author" content="Lakhan Lakhnotra">
-  <meta name="robots" content="index, follow">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Lakhan Lakhnotra Instagram Profile Page Clone" />
+  <meta name="keywords" content="Lakhan, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma" />
+  <meta name="author" content="Lakhan Lakhnotra" />
+  <meta name="robots" content="index, follow" />
   <title>lakhan_lakhnotra • Instagram</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #000;
-      font-family: 'Segoe UI', sans-serif;
       color: white;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     }
     .container {
       max-width: 600px;
       margin: 0 auto;
-      padding: 20px 16px 40px;
+      padding: 20px 16px;
     }
-    .top {
+    .username-line {
       display: flex;
       align-items: center;
-      margin-bottom: 20px;
+      font-size: 22px;
+      font-weight: 700;
+      margin-bottom: 14px;
+    }
+    .username-line img {
+      width: 18px;
+      height: 18px;
+      margin-left: 6px;
+    }
+    .profile-row {
+      display: flex;
+      align-items: center;
+      margin-bottom: 14px;
     }
     .dp {
       width: 95px;
@@ -33,39 +45,32 @@
       object-fit: cover;
       margin-right: 28px;
     }
-    .info {
-      flex: 1;
-    }
-    .username-line {
-      display: flex;
-      align-items: center;
-      font-size: 20px;
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
-    .username-line img {
-      width: 18px;
-      height: 18px;
-      margin-left: 6px;
-    }
-    .name {
-      font-weight: 600;
-      font-size: 14px;
-      margin-bottom: 18px;
-    }
     .stats {
       display: flex;
       justify-content: space-between;
+      flex: 1;
       font-size: 14px;
-      margin-bottom: 12px;
     }
     .stats div {
       text-align: center;
     }
+    .name {
+      font-weight: 600;
+      font-size: 14px;
+      margin: 8px 0 16px;
+    }
+    .bio {
+      font-size: 14px;
+      line-height: 1.5;
+      margin-bottom: 20px;
+    }
+    .handle {
+      color: #a78bfa;
+    }
     .btns {
       display: flex;
       gap: 8px;
-      margin-bottom: 16px;
+      margin-top: 10px;
     }
     .btns a {
       flex: 1;
@@ -85,41 +90,36 @@
       color: white;
       border: 1px solid #333;
     }
-    .bio {
-      font-size: 14px;
-      line-height: 1.5;
-    }
-    .handle {
-      color: #a78bfa;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="top">
-      <img src="profile.jpg" alt="Profile" class="dp">
-      <div class="info">
-        <div class="username-line">
-          lakhan_lakhnotra
-          <img src="verified.svg" alt="Verified">
-        </div>
-        <div class="name">Lakhan Ahir</div>
-        <div class="stats">
-          <div><strong>14</strong><br>Posts</div>
-          <div><strong>639</strong><br>Followers</div>
-          <div><strong>548</strong><br>Following</div>
-        </div>
-        <div class="btns">
-          <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
-          <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
-        </div>
+    <div class="username-line">
+      lakhan_lakhnotra
+      <img src="verified.svg" alt="Verified" />
+    </div>
+
+    <div class="profile-row">
+      <img src="profile.jpg" alt="DP" class="dp" />
+      <div class="stats">
+        <div><strong>14</strong><br />Posts</div>
+        <div><strong>639</strong><br />Followers</div>
+        <div><strong>548</strong><br />Following</div>
       </div>
     </div>
+
+    <div class="name">Lakhan Ahir</div>
+
     <div class="bio">
-      धर्मो रक्षति रक्षितः<br>
-      (Dharma Protects Those Who Protect It)<br>
-      <span class="handle">@lakhan_ahir_9499</span><br>
+      धर्मो रक्षति रक्षितः<br />
+      (Dharma Protects Those Who Protect It)<br />
+      <span class="handle">@lakhan_ahir_9499</span><br />
       © lakhan_lakhnotra
+    </div>
+
+    <div class="btns">
+      <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="follow">Follow</a>
+      <a href="https://instagram.com/lakhan_lakhnotra" target="_blank" class="message">Message</a>
     </div>
   </div>
 </body>
