--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
   <div class="container">
     <div class="username-line">
-          lakhan_lakhnotra
+        ‎   lakhan_lakhnotra
       <img src="verified.svg" alt="Verified" />
     </div>
 
