--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <div class="profile-row">
       <img src="profile.jpg" alt="DP" class="dp" />
       <div class="stats">
-        <div><strong>14</strong><br />Posts</div>
-        <div><strong>639</strong><br />Followers</div>
+        <div><strong>100</strong><br />Posts</div>
+        <div><strong>900k</strong><br />Followers</div>
         <div><strong>548</strong><br />Following</div>
       </div>
     </div>
