--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YC5G3WV8LP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YC5G3WV8LP');
+</script>
+  
   <meta name="description" content="Lakhan Lakhnotra Instagram Profile Page Clone" />
   <meta name="keywords" content="Lakhan, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma" />
   <meta name="author" content="Lakhan Lakhnotra" />
