--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="Lakhan Lakhnotra" />
   <meta name="robots" content="index, follow" />
 
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YC5G3WV8LP"></script>
 <script>
