--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="robots" content="index, follow" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="/https://www.instagram.lakhanlakhnotra.online/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/https://www.instagram.lakhanlakhnotra.online/favicon.svg" />
+<link rel="shortcut icon" href="/https://www.instagram.lakhanlakhnotra.online/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/https://www.instagram.lakhanlakhnotra.online/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Lakhan lakhnotra" />
+<link rel="manifest" href="/https://www.instagram.lakhanlakhnotra.online/site.webmanifest" />
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YC5G3WV8LP"></script>
