--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />  
-  <meta name="description" content="Lakhan Lakhnotra Instagram Profile Page " />
+  <meta name="description" content="@Lakhan_Lakhnotra Instagram Profile Page " />
   <meta name="keywords" content="Lakhan, lakhan lakhnotra, @lakhan_lakhnotra, @lakhan_ahir_9499, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma" />
   <meta name="author" content="Lakhan Lakhnotra" />
   <meta name="robots" content="index, follow" />
