--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />  
   <meta name="description" content="@Lakhan_Lakhnotra Instagram Profile Page " />
-  <meta name="keywords" content="Lakhan, lakhan lakhnotra, @lakhan_lakhnotra, @lakhan_ahir_9499, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma" />
+  <meta name="keywords" content="Lakhan, lakhan lakhnotra, @lakhan_lakhnotra, @lakhan_ahir_9499, Lakhan Ahir, Lakhan Lakhnotra, Instagram, Dharma, lakhan instagram, lakhan lakhnotra instagram, lakhan.instagram, lakhan.modverse, lakhan.modverse.online, instagram.lakhan, instagram.lakhanlakhnotra, instagram.lakhanlakhnotra.online, modverse, modverse.online, www.modverse.online, tempmail, ai tools, modverse.modverse.online, privacy tools, lakhan lakhnotra, @lakhan lakhnotra, @lakhan_lakhnotra, lakhan, lakhan ahir, resume ai, tempmail.modverse.online, instagram caption ai" />
   <meta name="author" content="Lakhan Lakhnotra" />
   <meta name="robots" content="index, follow" />
 
